adds new isometric wall width and asynchronous html5 range inputs

--- a/inc/main.css
+++ b/inc/main.css
@@ -24,6 +24,9 @@ img, canvas {
   margin-right: 10px;
   border: 1px solid #E34400;
 }
+img {
+  border: none;
+}
 canvas { background-color: #F0F0F0;}
 article a:nth-of-type(3n) img{
   margin: 0;
